# cthulhu

./: .gitignore  .gitlab-ci.yml  Cargo.toml
src/: data.rs  eq_floaties.rs  filtering.rs  lib.rs  table.rs  tentable.rs
