[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.test]
opt-level = 3

[profile.release]
strip = true
codegen-units = 1

[dependencies]
rayon = "1.6"
hashbrown = {version = "0.13.1", features = ["serde", "rayon"]}
mimalloc = "0.1.28"
# velvet = { path = "../velvet"}
# velvet = {git = "https://git.reflexes.me/Orchid/velvet"}
serde = { version = "1.0.152", features = ["derive", "rc"] }
rand = "0.8.4"
serde_json = "1.0.87"
serde_with = "2.1.0"
chrono = "0.4.0"
parking_lot = {version = "0.12.0", features = ["hardware-lock-elision"]}
csv = "1.1.5"
xlsxwriter = "0.5.0"
regex = "1.7.3"