[package]
name = "cthulhu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.test]
opt-level = 1

[profile.release]
strip = true
codegen-units = 1

[dependencies]
rayon = "1.6"
hashbrown = {version = "0.13.1", features = ["serde", "rayon"]}
mimalloc = "0.1.28"
serde = { version = "1.0.152", features = ["derive", "rc"] }
parking_lot = {version = "0.12.0", features = ["hardware-lock-elision", "serde"]}
csv = "1.1.5"
xlsxwriter = "0.5.0"
serde_json = "1.0.87"
chrono = "0.4.24"

# tokio = { version = "1.23.0", features = ["full"] }
# tokio-util = { version = "0.7.0", features = ["full"] }
# futures-util = "0.3"
# futures-channel = "0.3"
# futures = { version = "0.3.0", features = ["thread-pool"]}
# bytes = "1.1.0"
# tungstenite = "0.18.0"
# tokio-tungstenite = "0.18.0"
# url = "2.0.0"
# paris = { version = "1.5", features = ["timestamps", "macros"] }

# velvet = { path = "../velvet"}